fix: 🐛 Use a higher z-index to hinder conflict issues

--- a/src/anatomy.styl
+++ b/src/anatomy.styl
@@ -11,7 +11,7 @@
   justify-content center
   line-height 150%
   font-size 16px
-  z-index 20
+  z-index 100000
 
 .dissection:after
   content ""
@@ -20,7 +20,7 @@
   top 100%
   width 1px
   background-color #d4397a
-  z-index 10
+  z-index 99999
 
 
 .dissection.outline:after,
@@ -55,7 +55,7 @@
   top 100%
   width 1px
   background-color #d4397a
-  z-index 10
+  z-index 99999
 
 .dissection.button-outline:after
   content ""
@@ -65,7 +65,7 @@
   right 100%
   height 1px
   background-color #d4397a
-  z-index 10
+  z-index 99999
 
 .dissection.button-icon:after
   content ""
@@ -75,7 +75,7 @@
   top 50%
   height 1px
   background-color #d4397a
-  z-index 10
+  z-index 99999
 
 .dissection.button-icon:before
   content ""
@@ -84,4 +84,4 @@
   left calc(100% + 48px)
   width 1.5rem
   border 1px solid #d4397a
-  z-index 10
+  z-index 99999
