--- a/src/speccer.styl
+++ b/src/speccer.styl
@@ -11,7 +11,7 @@
   justify-content center
   line-height 150%
   font-size 16px
-  z-index 20
+  z-index 100000
   box-sizing: content-box;
   &:after
     content ""
@@ -20,7 +20,7 @@
     top 100%
     width 1px
     background-color #d4397a
-    z-index 10
+    z-index 99999
   &.outline
     &.left
       &:after
@@ -110,7 +110,7 @@
       top 100%
       width 1px
       background-color #d4397a
-      z-index 10
+      z-index 99999
   &.button-outline
     &:after
       right 100%
@@ -124,7 +124,7 @@
       left calc(100% + 48px)
       width 1.5rem
       border 1px solid #d4397a
-      z-index 10
+      z-index 99999
 
 .dissection.outline.top:after,
 .dissection.outline:after
@@ -161,7 +161,7 @@
   justify-content center
   line-height 150%
   font-size 16px
-  z-index 20
+  z-index 100000
 
 .dissection.outline.full.right:after,
 .dissection.outline.full.left:after
@@ -180,7 +180,7 @@
   content ""
   position absolute
   background-color #d4397a
-  z-index 20
+  z-index 100000
   display block
 
 .dissection.outline.full.right:before,
@@ -222,7 +222,7 @@
   justify-content center
   line-height 150%
   font-size 16px
-  z-index 20
+  z-index 100000
 
 .dissection.outline.enclose.right:after,
 .dissection.outline.enclose.left:after
@@ -241,7 +241,7 @@
   content ""
   position absolute
   background-color #d4397a
-  z-index 20
+  z-index 100000
   display block
 
 .dissection.outline.enclose.right:before,
@@ -266,13 +266,13 @@
   top 50%
   height 1px
   background-color #d4397a
-  z-index 10
+  z-index 99999
 
 .speccer
   font-family "Menlo for Powerline", "Menlo Regular for Powerline", "DejaVu Sans Mono", Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace !important
   justify-content center
   align-items center
-  z-index 10
+  z-index 99999
   position absolute
   display flex
   font-size 12px
